@@ -1,3 +1,8 @@
+2012-09-09  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
+
+	* mime-edit.el (mime-edit-insert-file)
+	(mime-edit-insert-file-as-text): Minor refactoring.
+
 2012-09-08  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
 
 	* mime-edit.el (mime-edit-insert-text-file)
